--- a/.github/workflows/self_host_cloud_docker.yml
+++ b/.github/workflows/self_host_cloud_docker.yml
@@ -318,6 +318,12 @@ jobs:
           T="${{ github.event.inputs.custom_tag }}"
           echo "GIT_TAG=$T" >> $GITHUB_ENV
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Download GoTrue image (amd64)
         uses: actions/download-artifact@v4
         with:
@@ -432,6 +438,10 @@ jobs:
         run: |
           docker compose -f docker-compose-ci.yml down
           docker ps -a
+
+      - name: Logout from Docker Hub
+        if: always()
+        run: docker logout
 
   appflowy_cloud_push:
     runs-on: ubuntu-22.04
