--- a/.github/workflows/self_host_cloud_docker.yml
+++ b/.github/workflows/self_host_cloud_docker.yml
@@ -3,8 +3,20 @@ name: Self-Hosted AppFlowy Cloud Docker Images
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: "Branch to build from"
+      gotrue_branch:
+        description: "GoTrue branch (from AppFlowy-Cloud-Premium)"
+        required: true
+        default: "main"
+      appflowy_cloud_branch:
+        description: "AppFlowy Cloud & Worker branch (from AppFlowy-Cloud-Premium)"
+        required: true
+        default: "main"
+      appflowy_ai_branch:
+        description: "AppFlowy AI branch (from AppFlowy-AI-Premium)"
+        required: true
+        default: "main"
+      appflowy_web_branch:
+        description: "AppFlowy Web branch (from AppFlowy-Web-Premium)"
         required: true
         default: "main"
       custom_tag:
@@ -64,6 +76,7 @@ env:
   DATABASE_URL: postgres://postgres:password@localhost:5432/postgres
   SQLX_OFFLINE: true
   RUST_TOOLCHAIN: "1.86.0"
+  CI_APPFLOWY_CLOUD_FEATURES: ""  # Define your features here
 
 jobs:
   gotrue_image:
@@ -78,7 +91,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Cloud-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.gotrue_branch }}
           fetch-depth: 1
 
       - name: Set up QEMU
@@ -221,7 +234,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Cloud-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_cloud_branch }}
           fetch-depth: 1
 
       - name: Set up QEMU
@@ -253,7 +266,7 @@ jobs:
             --cache-from type=gha,scope=appflowy_cloud-${{ matrix.job.name }} \
             --cache-to type=gha,mode=max,scope=appflowy_cloud-${{ matrix.job.name }} \
             --build-arg PROFILE=release \
-            --build-arg FEATURES=${{ secrets.CI_APPFLOWY_CLOUD_FEATURES }} \
+            --build-arg FEATURES=${{ env.CI_APPFLOWY_CLOUD_FEATURES }} \
             --build-arg APP_VERSION=${{ env.GIT_TAG }} \
             --load \
             --quiet \
@@ -309,7 +322,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Cloud-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_cloud_branch }}
           fetch-depth: 1
 
       - name: Get git tag
@@ -403,21 +416,6 @@ jobs:
           
           docker compose -f docker-compose-ci.yml up -d --no-build
           docker ps -a
-
-      - name: Wait for services to be ready
-        run: |
-          echo "Waiting for services to be ready..."
-          for i in {1..30}; do
-            if curl -f http://localhost/health 2>/dev/null; then
-              echo "Health check passed after $((i*5)) seconds"
-              exit 0
-            fi
-            echo "Attempt $i: Health check failed, waiting 5 seconds..."
-            sleep 5
-          done
-          echo "Health check timeout after 150 seconds"
-          docker logs appflowy-docker-ci-appflowy_cloud-1 --tail 50
-          docker logs appflowy-docker-ci-appflowy_billing-1 --tail 50
 
       - name: Test server info
         run: |
@@ -537,7 +535,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-AI-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_ai_branch }}
           fetch-depth: 1
 
       - name: Set up QEMU
@@ -570,7 +568,7 @@ jobs:
             --cache-to type=gha,mode=max,scope=appflowy_ai-${{ matrix.job.name }} \
             --build-arg GITHUB_TOKEN=${{ secrets.ADMIN_GITHUB_TOKEN }} \
             --build-arg PROFILE=release \
-            --build-arg FEATURES=${{ secrets.CI_APPFLOWY_CLOUD_FEATURES }} \
+            --build-arg FEATURES=${{ env.CI_APPFLOWY_CLOUD_FEATURES }} \
             --build-arg APP_VERSION=${{ env.GIT_TAG }} \
             --load \
             --quiet \
@@ -602,7 +600,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Cloud-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_cloud_branch }}
           fetch-depth: 1
 
       - name: Get git tag
@@ -827,7 +825,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Cloud-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_cloud_branch }}
           fetch-depth: 1
 
       - name: Set up QEMU
@@ -978,7 +976,7 @@ jobs:
         with:
           repository: AppFlowy-IO/AppFlowy-Web-Premium
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event.inputs.appflowy_web_branch }}
           fetch-depth: 1
 
 
