--- a/.github/workflows/self_host_cloud_docker.yml
+++ b/.github/workflows/self_host_cloud_docker.yml
@@ -57,7 +57,7 @@ env:
   DATABASE_URL: postgres://postgres:password@localhost:5432/postgres
   SQLX_OFFLINE: true
   RUST_TOOLCHAIN: "1.86.0"
-  CI_APPFLOWY_CLOUD_FEATURES: ""  # Define your features here
+  CI_APPFLOWY_CLOUD_FEATURES: "self-host-af"  # Define your features here
 
 jobs:
   gotrue_image:
