--- a/.github/workflows/self_host_cloud_docker.yml
+++ b/.github/workflows/self_host_cloud_docker.yml
@@ -1107,7 +1107,7 @@ jobs:
     runs-on: ${{ matrix.job.os }}
     needs: [wait_for_all_builds]
     env:
-      IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/appflowy_admin
+      IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend
     strategy:
       fail-fast: true
       matrix:
@@ -1152,8 +1152,8 @@ jobs:
           platforms: ${{ matrix.job.docker_platform }}
           file: ./apps/super/Dockerfile
           push: true
-          cache-from: type=gha,scope=appflowy_admin-${{ matrix.job.name }}
-          cache-to: type=gha,mode=max,scope=appflowy_admin-${{ matrix.job.name }}
+          cache-from: type=gha,scope=admin_frontend-${{ matrix.job.name }}
+          cache-to: type=gha,mode=max,scope=admin_frontend-${{ matrix.job.name }}
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}-${{ matrix.job.name }}
             ${{ github.event.inputs.tag_latest == 'true' && format('{0}:{1}-{2}', env.IMAGE_NAME, env.LATEST_TAG, matrix.job.name) || '' }}
@@ -1182,19 +1182,19 @@ jobs:
           T="${{ github.event.inputs.custom_tag }}"
           echo "GIT_TAG=$T" >> $GITHUB_ENV
 
-      - name: Create and push manifest for appflowy_admin:version
+      - name: Create and push manifest for admin_frontend:version
         uses: Noelware/docker-manifest-action@0.4.3
         with:
-          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/appflowy_admin:${{ env.GIT_TAG }}
-          images: ${{ secrets.DOCKER_HUB_USERNAME }}/appflowy_admin:${{ env.GIT_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/appflowy_admin:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.GIT_TAG) || '' }}
+          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.GIT_TAG }}
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.GIT_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/admin_frontend:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.GIT_TAG) || '' }}
           push: true
 
-      - name: Create and push manifest for appflowy_admin:latest
+      - name: Create and push manifest for admin_frontend:latest
         if: ${{ github.event.inputs.tag_latest == 'true' }}
         uses: Noelware/docker-manifest-action@0.4.3
         with:
-          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/appflowy_admin:${{ env.LATEST_TAG }}
-          images: ${{ secrets.DOCKER_HUB_USERNAME }}/appflowy_admin:${{ env.LATEST_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/appflowy_admin:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.LATEST_TAG) || '' }}
+          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.LATEST_TAG }}
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.LATEST_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/admin_frontend:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.LATEST_TAG) || '' }}
           push: true
 
       - name: Logout from Docker Hub
