chore: run name

--- a/.github/workflows/admin_frontend_docker.yml
+++ b/.github/workflows/admin_frontend_docker.yml
@@ -1,4 +1,5 @@
 name: Build Admin Frontend Docker Image
+run-name: Build Admin Frontend ${{ github.event.inputs.tag_name }} from ${{ github.event.inputs.admin_branch }}
 
 on:
   workflow_dispatch:
