--- a/.github/workflows/admin_frontend_docker.yml
+++ b/.github/workflows/admin_frontend_docker.yml
@@ -1,5 +1,5 @@
 name: Build Admin Frontend Docker Image
-run-name: Build Admin Frontend ${{ github.event.inputs.tag_name }} from ${{ github.event.inputs.admin_branch }} ${{ github.event.inputs.tag_latest == 'true' && 'latest' || '' }}
+run-name: Build Admin Frontend ${{ github.event.inputs.tag_name }} from ${{ github.event.inputs.admin_branch }} ${{ github.event.inputs.tag_latest == 'true' && 'latest' || '' }} ${{ github.event.inputs.push_public == 'true' && '(public + premium)' || '(premium only)' }}
 
 on:
   workflow_dispatch:
@@ -23,6 +23,11 @@ on:
         type: boolean
         required: false
         default: true
+      push_public:
+        description: 'Also push to public admin_frontend repository'
+        type: boolean
+        required: false
+        default: false
 
 env:
   LATEST_TAG: latest
@@ -35,7 +40,8 @@ jobs:
       matrix:
         job: ${{ fromJson(github.event.inputs.build_arm64 == 'true' && '[{"os":"ubuntu-22.04","platform":"linux/amd64","arch":"amd64"},{"os":"ubuntu-22.04-arm","platform":"linux/arm64","arch":"arm64v8"}]' || '[{"os":"ubuntu-22.04","platform":"linux/amd64","arch":"amd64"}]') }}
     env:
-      IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend
+      IMAGE_NAME_PREMIUM: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend_premium
+      IMAGE_NAME_PUBLIC: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend
 
     steps:
       - name: Check out the repository
@@ -68,9 +74,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: registry.hub.docker.com/${{ env.IMAGE_NAME }}
+          images: registry.hub.docker.com/${{ env.IMAGE_NAME_PREMIUM }}
 
-      - name: Build and push ${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}-${{ matrix.job.arch }}
+      - name: Build and push to admin_frontend_premium
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -80,8 +86,10 @@ jobs:
           cache-from: type=gha,scope=admin_frontend-${{ matrix.job.arch }}
           cache-to: type=gha,mode=max,scope=admin_frontend-${{ matrix.job.arch }}
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}-${{ matrix.job.arch }}
-            ${{ github.event.inputs.tag_latest == 'true' && format('{0}:{1}-{2}', env.IMAGE_NAME, env.LATEST_TAG, matrix.job.arch) || '' }}
+            ${{ env.IMAGE_NAME_PREMIUM }}:${{ env.GIT_TAG }}-${{ matrix.job.arch }}
+            ${{ github.event.inputs.tag_latest == 'true' && format('{0}:{1}-{2}', env.IMAGE_NAME_PREMIUM, env.LATEST_TAG, matrix.job.arch) || '' }}
+            ${{ github.event.inputs.push_public == 'true' && format('{0}:{1}-{2}', env.IMAGE_NAME_PUBLIC, env.GIT_TAG, matrix.job.arch) || '' }}
+            ${{ github.event.inputs.push_public == 'true' && github.event.inputs.tag_latest == 'true' && format('{0}:{1}-{2}', env.IMAGE_NAME_PUBLIC, env.LATEST_TAG, matrix.job.arch) || '' }}
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           build-args: |
@@ -107,15 +115,31 @@ jobs:
           T="${{ github.event.inputs.tag_name }}"
           echo "GIT_TAG=$T" >> $GITHUB_ENV
 
-      - name: Create and push manifest for admin_frontend:version
+      - name: Create and push manifest for admin_frontend_premium:version
+        uses: Noelware/docker-manifest-action@0.4.3
+        with:
+          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend_premium:${{ env.GIT_TAG }}
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend_premium:${{ env.GIT_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/admin_frontend_premium:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.GIT_TAG) || '' }}
+          push: true
+
+      - name: Create and push manifest for admin_frontend_premium:latest
+        if: ${{ github.event.inputs.tag_latest == 'true' }}
+        uses: Noelware/docker-manifest-action@0.4.3
+        with:
+          inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend_premium:${{ env.LATEST_TAG }}
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend_premium:${{ env.LATEST_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/admin_frontend_premium:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.LATEST_TAG) || '' }}
+          push: true
+
+      - name: Create and push manifest for admin_frontend:version (public)
+        if: ${{ github.event.inputs.push_public == 'true' }}
         uses: Noelware/docker-manifest-action@0.4.3
         with:
           inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.GIT_TAG }}
           images: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.GIT_TAG }}-amd64${{ github.event.inputs.build_arm64 == 'true' && format(',{0}/admin_frontend:{1}-arm64v8', secrets.DOCKER_HUB_USERNAME, env.GIT_TAG) || '' }}
           push: true
 
-      - name: Create and push manifest for admin_frontend:latest
-        if: ${{ github.event.inputs.tag_latest == 'true' }}
+      - name: Create and push manifest for admin_frontend:latest (public)
+        if: ${{ github.event.inputs.push_public == 'true' && github.event.inputs.tag_latest == 'true' }}
         uses: Noelware/docker-manifest-action@0.4.3
         with:
           inputs: ${{ secrets.DOCKER_HUB_USERNAME }}/admin_frontend:${{ env.LATEST_TAG }}
