chore: build woker with feature flag

--- a/.github/workflows/self_host_cloud_docker.yml
+++ b/.github/workflows/self_host_cloud_docker.yml
@@ -858,6 +858,7 @@ jobs:
           provenance: false
           build-args: |
             PROFILE=release
+            FEATURES=${{ env.CI_APPFLOWY_CLOUD_FEATURES }}
             APP_VERSION=${{ env.GIT_TAG }}
 
       - name: Save AppFlowy Worker image locally
