--- a/.github/workflows/appflowy_website_docker.yml
+++ b/.github/workflows/appflowy_website_docker.yml
@@ -1,5 +1,5 @@
 name: Build AppFlowy Website Docker Image
-run-name: Build AppFlowy Website ${{ github.event.inputs.tag_name }} from ${{ github.event.inputs.website_branch }} ${{ github.event.inputs.tag_latest == 'true' && 'latest' || '' }}
+run-name: ${{ github.event.inputs.environment }}  Build AppFlowy Website ${{ github.event.inputs.tag_name }} from ${{ github.event.inputs.website_branch }} ${{ github.event.inputs.tag_latest == 'true' && 'latest' || '' }}
 
 on:
   workflow_dispatch:
